--- a/kayela-portfolio/src/app.postcss
+++ b/kayela-portfolio/src/app.postcss
@@ -6,7 +6,7 @@
 /* Example: secondary color via Tailwind: */
 .dark body,
  #body-cont { 
-    background: #020617; 
+    //background: #020617; 
     position: relative;
 }
 
