set body and font family

--- a/kayela-portfolio/src/app.postcss
+++ b/kayela-portfolio/src/app.postcss
@@ -10,3 +10,18 @@
     position: relative;
 }
 
+html {
+    scroll-bhavior: smooth;
+}
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+.poppins {
+    font-family: 'Poppins', sans-serif;
+}
+
